# agent-ipb

./: .env.example  .gitignore  README.md  pyproject.toml
digesto_ipb_1951-2026/: README.md  stats_por_ano.csv
digesto_ipb_1951-2026/by_year/: 1951.jsonl  1952.jsonl  1953.jsonl  1954.jsonl  1955.jsonl  1956.jsonl  1957.jsonl  1958.jsonl  1959.jsonl  1960.jsonl  1961.jsonl  1962.jsonl  1963.jsonl  1964.jsonl  1965.jsonl  1966.jsonl  1967.jsonl  1968.jsonl  1969.jsonl  1970.jsonl  1971.jsonl  1972.jsonl  1973.jsonl  1974.jsonl  1975.jsonl  1976.jsonl  1977.jsonl  1978.jsonl  1979.jsonl  1980.jsonl  1981.jsonl  1982.jsonl  1983.jsonl  1984.jsonl  1985.jsonl  1986.jsonl  1987.jsonl  1988.jsonl  1989.jsonl  1990.jsonl  (+35 more)
documentos_oficiais_ipb/: README.md  metadados.json
scripts/: atualizar_digesto.py  baixar_documentos_importantes.py  extrair_digesto_completo.py
src/agent_ipb/: __init__.py
