[project]
name = "agent-ipb"
version = "0.1.0"
description = "Agente de IA para consulta ao Digesto da IPB (RAG sobre atas e resoluções do Supremo Concílio e da Comissão Executiva, 1951-presente)"
requires-python = ">=3.10"
dependencies = []


[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
